2002-05-21  Han-Wen  <hanwen@cs.uu.nl>

	* scm/grob-description.scm:  fix alignment of barnumber: make sure
	it doesn't hit the G-clef. 

	* input/mozart-hrn3-defs.ly (startGraceMusic): typo (it's
	startGraceMusic not startGraceContext).

2002-05-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/autogen.sh: Check for autoconf2.13, and abort if not
	found.

2002-05-20  Han-Wen  <hanwen@cs.uu.nl>

	* lily/accidental-engraver.cc: remove old accidental engraver,
	move new one to accidental-engraver.cc.

	* lily/local-key-item.cc: remove file

	* lily/include/local-key-item.hh: remove file

	* scripts/ly2dvi.py (make_preview): add --preview-resolution
	option.

	* lily/accidental.cc (brew_molecule): support for cautionary
	accidentals. 

	* lily/note-head.cc (internal_brew_molecule): warn if note head
	not found.

	* lily/time-signature.cc (special_time_signature): remove warning
	about time signature. 

	* lily/spacing-spanner.cc (musical_column_spacing): Prevent
	reverse springs by limiting fixed-note space.

2002-05-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Bugfix: complain if program not found.

	* scripts/update-lily.py (next_version, prev_version, diff_name):
	New function.  Patches now named name-prev-latest.diff.gz.
	Bugfix: import shutil.

2002-05-19  Han-Wen  <hanwen@cs.uu.nl>

	* input/tutorial/sammartini.ly: fix and document autochange
	weirdness.

	* scm/pdftex.scm: resurrect PDFTeX output. Still doesn't work, but
	does produce .pdftex files.

	* lily/note-collision.cc (check_meshing_chords): move file from
	collision.cc, implement merged note heads (there you go, Drarn :-)

	* input/regression/collision-heads.ly: new file

	* VERSION 1.5.57 released.
	
2002-05-18  Juergen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-heads.mf, scm/grob-description.scm,
	scm/grob-property-description.scm, scm/interface-description,
	lily/include/my-lily-parser.hh, lily/include/ligature-head.hh,